<resources>
    <string name="app_name">Peperoni</string>
    <string name="order_pizza">Order Pizza</string>
    <string name="small_pizza">Small </string>
    <string name="medium_pizza">Medium </string>
    <string name="large_pizza">Large </string>
    <string name="choose_ingredient">Choose Ingredient</string>
    <string name="chicken">Chicken</string>
    <string name="ham">Ham</string>
    <string name="tuna">Tuna</string>
    <string name="bacon">Bacon</string>
    <string name="cheese">Cheese</string>
    <string name="special_flavor">Special Flavor</string>
    <string name="cancel">Cancel</string>
    <string name="next">Next</string>
    <string name="choose_pickup_date">Choose Pickup Date</string>
    <string name="delivery_info">Delivery Info</string>
    <string name="order_summary">Order Summary</string>
    <string name="send">Send Order via eMail</string>
    <string name="quantity">Quantity</string>
    <string name="ingredient">Ingredient</string>
    <string name="pickup_date">Pickup date</string>
    <string name="subtotal_price">Subtotal %s</string>
    <string name="total_price">Total %s</string>
    <string name="new_pizza_order">New Pizza Order</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="order_details">Size: %1$s  \n Ingredient: %2$s \nPickup date: %3$s \n Name: %4$s \n Address: %5$s \n
        Total: %6$s \n\n Thank you!</string>
    <string name="extra_cost">Same day pickup has 2$ extra cost</string>

</resources>