<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FlavorFragment">

    <data>
        <variable
            name="viewModel"
            type="com.example.peperoni.model.PizzaViewModel" />
        <variable
            name="flavorFragment"
            type="com.example.peperoni.IngredientFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/side_margin">

            <RadioGroup
                android:id="@+id/flavor_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/vanilla"
                    android:checked="@{viewModel.ingredient.equals(@string/chicken)}"
                    android:onClick="@{() -> viewModel.setIngredient(@string/chicken)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chicken" />

                <RadioButton
                    android:id="@+id/chocolate"
                    android:checked="@{viewModel.ingredient.equals(@string/ham)}"
                    android:onClick="@{() -> viewModel.setIngredient(@string/ham)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ham" />

                <RadioButton
                    android:id="@+id/red_velvet"
                    android:checked="@{viewModel.ingredient.equals(@string/tuna)}"
                    android:onClick="@{() -> viewModel.setIngredient(@string/tuna)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tuna" />

                <RadioButton
                    android:id="@+id/salted_caramel"
                    android:checked="@{viewModel.ingredient.equals(@string/bacon)}"
                    android:onClick="@{() -> viewModel.setIngredient(@string/bacon)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bacon" />

                <RadioButton
                    android:id="@+id/coffee"
                    android:checked="@{viewModel.ingredient.equals(@string/cheese)}"
                    android:onClick="@{() -> viewModel.setIngredient(@string/cheese)}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cheese" />
            </RadioGroup>

            <View
                android:id="@+id/divider"
                style="@style/Widget.Peperoni.Divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/flavor_options" />

            <TextView
                android:id="@+id/subtotal"
                style="@style/Widget.Peperoni.TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider"
                tools:text="Subtotal $5.00"
                android:text="@{@string/subtotal_price(viewModel.price)}"/>

            <Button
                android:id="@+id/cancel_button"
                android:onClick="@{() -> flavorFragment.cancelOrder()}"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                app:layout_constraintEnd_toStartOf="@id/next_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/next_button"
                style="?attr/materialButtonOutlinedStyle"/>

            <Button
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/side_margin"
                android:text="@string/next"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancel_button"
                app:layout_constraintTop_toBottomOf="@id/subtotal"
                android:onClick="@{() -> flavorFragment.goToNextScreen()}"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>